compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/erasure/typeMappedToJava.kt
// RENDER_ALL_DIAGNOSTICS_FULL_TEXT
// RUN_PIPELINE_TILL: BACKEND
// DIAGNOSTICS: -UNUSED_PARAMETER -PLATFORM_CLASS_MAPPED_TO_KOTLIN

<!CONFLICTING_JVM_DECLARATIONS!>fun foo(s: java.lang.String) {}<!>
<!CONFLICTING_JVM_DECLARATIONS!>fun foo(s: String) {}<!>

/* GENERATED_FIR_TAGS: functionDeclaration */
